[build-system]
requires = ["setuptools>=61.0", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = "toper"
version = "0.1.0"
description = "A Python package for graph processing and feature extraction"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

authors = [
    { name = "Astrit Tola", email = "astrittola@gmail.com" }
]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "networkx>=3.0",
    "joblib>=1.2",
    "GraphRicciCurvature>=0.5"
]

keywords = [
    "graph",
    "feature-extraction",
    "network-analysis",
    "TopER",
    "GraphRepresentationLearning"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/AstritTola/TopER"
Repository = "https://github.com/AstritTola/TopER"
Documentation = "https://github.com/AstritTola/TopER#readme"

[tool.setuptools.packages.find]
where = ["."]
